feat(tp3): pedagogical improvements — add with() demos, edge-case comments and docs